--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
 //    compile 'io.reactivex.rxjava2:rxjava:$rx_version'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4.1"
