--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.51'
+        kotlinVersion = '1.3.11'
         springBootVersion = '2.0.2.RELEASE'
     }
     repositories {
@@ -41,7 +41,8 @@ repositories {
 
 
 dependencies {
-    def rx_version = '2.1.14'
+    def rxVersion = '2.2.5'
+    def jacksonVersion = '2.9.5'
 
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
@@ -50,13 +51,13 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 //    compile 'io.reactivex.rxjava2:rxjava:$rx_version'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxVersion"
 
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4.1"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
 
-    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.4'
+    compile "org.apache.pdfbox:pdfbox:2.0.4"
 
     compile("org.springframework.boot:spring-boot-starter-websocket")
 }
